--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@
 
 #index__highlight-product--content {
   max-width: 100vw;
-  padding-top: 142px;
+  padding-top: 129px;
   img {
     width: 100%;
   }
